scrollbar bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   margin: 0;
 }
 body{
+  width: 100%;
+  height: 100%;
   font-family: karla;
   background: #0B2434;
 }
